load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "http.go",
        "lru.go",
    ],
    importpath = "github.com/buchgr/bazel-remote/cache",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/djherbis/atime:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cache_test.go",
        "http_test.go",
        "lru_test.go",
        "utils_test.go",
    ],
    embed = [":go_default_library"],
)
