load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cache.go"],
    importpath = "github.com/buchgr/bazel-remote/cache",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
    ],
)
