load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "azblob.go",
        "config.go",
        "logger.go",
        "proxy.go",
        "s3.go",
        "tls.go",
    ],
    importpath = "github.com/buchgr/bazel-remote/v2/config",
    visibility = ["//visibility:public"],
    deps = [
        "//cache:go_default_library",
        "//cache/azblobproxy:go_default_library",
        "//cache/gcsproxy:go_default_library",
        "//cache/grpcproxy:go_default_library",
        "//cache/httpproxy:go_default_library",
        "//cache/s3proxy:go_default_library",
        "@com_github_azure_azure_sdk_for_go_sdk_azcore//:go_default_library",
        "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
        "@com_github_minio_minio_go_v7//:go_default_library",
        "@com_github_minio_minio_go_v7//pkg/credentials:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
