load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["generate_buildfile.go"],
    importpath = "github.com/buchgr/bazel-remote/integration-tests",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "integration-tests",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
