load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["ldap.go"],
    importpath = "github.com/buchgr/bazel-remote/v2/ldap",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "@com_github_abbot_go_http_auth//:go_default_library",
        "@in_gopkg_ldap_v3//:go_default_library",
    ],
)
