load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["testutils.go"],
    importpath = "github.com/buchgr/bazel-remote/v2/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//cache/hashing:go_default_library",
        "//genproto/build/bazel/remote/execution/v2:go_default_library",
    ],
)
