load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "disk.go",
        "findmissing.go",
        "load.go",
        "lru.go",
        "metrics.go",
        "options.go",
    ],
    importpath = "github.com/buchgr/bazel-remote/cache/disk",
    visibility = ["//visibility:public"],
    deps = [
        "//cache:go_default_library",
        "//cache/disk/casblob:go_default_library",
        "//cache/disk/zstdimpl:go_default_library",
        "//genproto/build/bazel/remote/execution/v2:go_default_library",
        "//utils/tempfile:go_default_library",
        "//utils/validate:go_default_library",
        "@com_github_djherbis_atime//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_x_sync//semaphore:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "disk_test.go",
        "findmissing_test.go",
        "lru_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//cache:go_default_library",
        "//cache/disk/casblob:go_default_library",
        "//cache/httpproxy:go_default_library",
        "//genproto/build/bazel/remote/execution/v2:go_default_library",
        "//utils:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/testutil:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
