load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "grpcproxy.go",
        "readcloser.go",
    ],
    importpath = "github.com/buchgr/bazel-remote/v2/cache/grpcproxy",
    visibility = ["//visibility:public"],
    deps = [
        "//cache:go_default_library",
        "//genproto/build/bazel/remote/asset/v1:go_default_library",
        "//genproto/build/bazel/remote/execution/v2:go_default_library",
        "//utils/backendproxy:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
