load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "hashing.go",
        "sha256.go",
    ],
    importpath = "github.com/buchgr/bazel-remote/v2/cache/hashing",
    visibility = ["//visibility:public"],
    deps = [
        "//genproto/build/bazel/remote/execution/v2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["hashing_test.go"],
    embed = [":go_default_library"],
)
