load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["http.go"],
    importpath = "github.com/buchgr/bazel-remote/cache/http",
    visibility = ["//visibility:public"],
    deps = [
        "//cache:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["http_test.go"],
    embed = [":go_default_library"],
    deps = ["//utils:go_default_library"],
)
