load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["s3.go"],
    importpath = "github.com/buchgr/bazel-remote/cache/s3",
    visibility = ["//visibility:public"],
    deps = [
        "//cache:go_default_library",
        "//config:go_default_library",
        "@com_github_minio_minio_go_v6//:go_default_library",
        "@com_github_minio_minio_go_v6//pkg/credentials:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
    ],
)
