#load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "metrics.pb.go",
    ],
    importpath = "github.com/buchgr/bazel-remote/genproto/metrics",
    visibility = ["//visibility:public"],
    deps = [
         "@com_github_golang_protobuf//proto:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
        # "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
         "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
         "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
#        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
    ],
)

# go_library(
#     name = "go_default_library",
#     srcs = [],
#     importpath = "github.com/buchgr/bazel-remote/genproto/metrics",
#     visibility = ["//visibility:public"],
#     deps = [
#         "//genproto/metrics:metrics_go_proto",
#         "@com_github_golang_protobuf//proto:go_default_library",
#     ],
# )
#
# go_proto_library(
#     name = "metrics_go_proto",
#     protos = ["//genproto/metrics:metrics_proto"],
#     importpath = "github.com/buchgr/bazel-remote/genproto/metrics",
#     visibility = ["//visibility:public"],
#     deps = [
#         "@com_github_golang_protobuf//proto:go_default_library",
#     ],
# )
#
# proto_library(
#     name = "metrics_proto",
#     srcs = ["grpc_metrics.proto"],
#     deps = [
#         "@com_google_protobuf//:empty_proto",
#     ],
#     visibility = ["//visibility:public"],
# )
